--- a/iotcrafter/README
+++ b/iotcrafter/README
@@ -14,7 +14,7 @@ Iotcrafter Docker Build
 	- create iotcrafter-specific hook for chroot.sh (copy our DT overlays)
 	- build image in standard way with ./RootStock-NG.sh + iotcrafter config
 	- prepare image wraping script
-	- create iotcrafter-specific hook for setup_sdcard.sh (patch uEnv.txt)
+	- create iotcrafter-specific hook for setup_sdcard.sh (patch /boot/uEnv.txt, /uEnv.txt)
 	- run image wraping script
 
 *** postbuild.sh
@@ -79,7 +79,7 @@ build-docker-iotcrafter.sh
 
 			- prepare a script for wraping result image
 			- prepare a hook (setup_sdcard_populate_after_hook) for the final image making script setup_sdcard.sh
-				- [IOTC] will edit the final uEnv.txt
+				- [IOTC] will edit the final /boot/uEnv.txt and /uEnv.txt
 			- call the script wraping result image (gift_wrap_final_images.sh)
 				- copy setup_sdcard_populate_after_hook to the dir of setup_sdcard.sh
 				- call setup_sdcard.sh with options
@@ -87,7 +87,9 @@ build-docker-iotcrafter.sh
 					- create partitions in the image file
 					- populate boot
 					- populate rootfs
-						- [IOTC] call the hook - edit uEnv.txt: insert init=..iotc_init.sh
+						- [IOTC] call the hook
+							- edit /boot/uEnv.txt: insert init=..iotc_init.sh, disable possible overrides of default DTB
+							- edit /uEnv.txt: insert code substituting default DTB
 
 		- get RC of the build and handle it to postbuild.sh script
 			- get RC and save it to build_rc file
